ACCUMULO-4588 Simplify Accumulo logging configuration
* Removed log4j config being done in Java but some remains
* Logging is now configured using standard log4j JVM property
  'log4.configuration' in accumulo-env.sh
* Tarball ships with less log4j config files (3 rather than 6)
  which are all log4j properties files.
* Log4j XML can still be used by editing accumulo-env.sh
* Moved AsyncSocketAppend to start module due to classpath issues
* Removed auditLog.xml and added audit log configuration to
  log4j-service & log4j-monitor properties files
* Accumulo conf/ directory no longer has an examples/ directory.
  Configuration files ship in conf/ and are used by default.
* Accumulo monitor by default will bind to 0.0.0.0 but will
  advertise hostname looked up in Java for log forwarding
* Shortened names of logging system properties
* Removed MonitorLoggingIT as it is now difficult to setup log
  forwarding using MiniAccumuloCluster.

--- a/assemble/conf/log4j-service.properties
+++ b/assemble/conf/log4j-service.properties
@@ -15,42 +15,48 @@
 
 # Write out everything at the DEBUG level to the debug log
 log4j.appender.A2=org.apache.log4j.RollingFileAppender
-log4j.appender.A2.File=${org.apache.accumulo.core.dir.log}/${org.apache.accumulo.core.application}${accumulo.service.instance}_${org.apache.accumulo.core.ip.localhost.hostname}_fromprops.debug.log
-log4j.appender.A2.MaxFileSize=1000MB
-log4j.appender.A2.MaxBackupIndex=10
+log4j.appender.A2.File=${accumulo.log.dir}/${accumulo.application}${accumulo.service.instance}_${accumulo.local.hostname}.debug.log
+log4j.appender.A2.MaxFileSize=100MB
+log4j.appender.A2.MaxBackupIndex=5
 log4j.appender.A2.Threshold=DEBUG
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %m%n
 
 # Write out INFO and higher to the regular log
 log4j.appender.A3=org.apache.log4j.RollingFileAppender
-log4j.appender.A3.File=${org.apache.accumulo.core.dir.log}/${org.apache.accumulo.core.application}${accumulo.service.instance}_${org.apache.accumulo.core.ip.localhost.hostname}_fromprops.log
-log4j.appender.A3.MaxFileSize=1000MB
-log4j.appender.A3.MaxBackupIndex=10
+log4j.appender.A3.File=${accumulo.log.dir}/${accumulo.application}${accumulo.service.instance}_${accumulo.local.hostname}.log
+log4j.appender.A3.MaxFileSize=100MB
+log4j.appender.A3.MaxBackupIndex=5
 log4j.appender.A3.Threshold=INFO
 log4j.appender.A3.layout=org.apache.log4j.PatternLayout
 log4j.appender.A3.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %m%n
 
 # Send all logging data to a centralized logger
 # If the centralized logger is down, buffer the log events, but drop them if it stays down
-log4j.appender.ASYNC=org.apache.accumulo.core.util.AsyncSocketAppender
-log4j.appender.ASYNC.RemoteHost=${org.apache.accumulo.core.host.log}
-log4j.appender.ASYNC.Port=${org.apache.accumulo.core.host.log.port}
-log4j.appender.ASYNC.Application=${org.apache.accumulo.core.application}${accumulo.service.instance}:${org.apache.accumulo.core.ip.localhost.hostname}
+log4j.appender.ASYNC=org.apache.accumulo.start.util.AsyncSocketAppender
+log4j.appender.ASYNC.RemoteHost=${accumulo.log.host}
+log4j.appender.ASYNC.Port=${accumulo.log.port}
+log4j.appender.ASYNC.Application=${accumulo.application}${accumulo.service.instance}:${accumulo.local.hostname}
 log4j.appender.ASYNC.Threshold=WARN
+
+## Configures Audit logs which are OFF by default.
+#log4j.appender.AUDIT=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.AUDIT.File=${accumulo.log.dir}/${accumulo.local.hostname}.audit
+#log4j.appender.AUDIT.DatePattern='.'yyyy-MM-dd
+#log4j.appender.AUDIT.layout=org.apache.log4j.PatternLayout
+#log4j.appender.AUDIT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS/Z} [%c{2}] %-5p: %m%n
+#log4j.logger.org.apache.accumulo.audit=INFO, AUDIT
+#log4j.additivity.org.apache.accumulo.audit=false
+## Uncomment above and comment out line below to turn Audit logging ON
+log4j.logger.org.apache.accumulo.audit=OFF
 
 # Log accumulo events to the debug, normal and remote logs.
 log4j.logger.org.apache.accumulo=DEBUG, A2, A3, ASYNC
 log4j.additivity.org.apache.accumulo=false
 
-# change to INFO for authorization events
-log4j.logger.org.apache.accumulo.server.security.Auditor=WARN
-
 log4j.logger.org.apache.accumulo.core.file.rfile.bcfile=INFO
-
 log4j.logger.org.mortbay.log=WARN
-
-log4j.logger.com.yahoo.zookeeper=ERROR
+log4j.logger.org.apache.zookeeper=ERROR
 
 # Log non-accumulo events to the debug and normal logs
 log4j.rootLogger=INFO, A2, A3
