Code review updates

--- a/assemble/conf/log4j-monitor.properties
+++ b/assemble/conf/log4j-monitor.properties
@@ -13,11 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Log4j 1.2 file that configures logging for Accumulo Monitor
+
 # Write out everything at the DEBUG level to the debug log
 log4j.appender.A2=org.apache.log4j.RollingFileAppender
 log4j.appender.A2.File=${accumulo.log.dir}/${accumulo.application}_${accumulo.local.hostname}.debug.log
 log4j.appender.A2.MaxFileSize=100MB
-log4j.appender.A2.MaxBackupIndex=5
+log4j.appender.A2.MaxBackupIndex=10
 log4j.appender.A2.Threshold=DEBUG
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %X{application} %m%n
@@ -26,7 +28,7 @@ log4j.appender.A2.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %X{applic
 log4j.appender.A3=org.apache.log4j.RollingFileAppender
 log4j.appender.A3.File=${accumulo.log.dir}/${accumulo.application}_${accumulo.local.hostname}.log
 log4j.appender.A3.MaxFileSize=100MB
-log4j.appender.A3.MaxBackupIndex=5
+log4j.appender.A3.MaxBackupIndex=10
 log4j.appender.A3.Threshold=INFO
 log4j.appender.A3.layout=org.apache.log4j.PatternLayout
 log4j.appender.A3.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %X{application} %m%n
@@ -35,17 +37,6 @@ log4j.appender.A3.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %X{applic
 log4j.appender.GUI=org.apache.accumulo.server.monitor.LogService
 log4j.appender.GUI.Keep=50
 log4j.appender.GUI.Threshold=WARN
-
-## Configures Audit logs which are OFF by default.
-#log4j.appender.AUDIT=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.AUDIT.File=${accumulo.log.dir}/${accumulo.local.hostname}.audit
-#log4j.appender.AUDIT.DatePattern='.'yyyy-MM-dd
-#log4j.appender.AUDIT.layout=org.apache.log4j.PatternLayout
-#log4j.appender.AUDIT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS/Z} [%c{2}] %-5p: %m%n
-#log4j.logger.org.apache.accumulo.audit=INFO, AUDIT
-#log4j.additivity.org.apache.accumulo.audit=false
-## Uncomment above and comment out line below to turn Audit logging ON
-log4j.logger.org.apache.accumulo.audit=OFF
 
 # Log accumulo messages to debug, normal and GUI
 log4j.logger.org.apache.accumulo=DEBUG, A2, A3, GUI
