--- a/assemble/conf/log4j.properties
+++ b/assemble/conf/log4j.properties
@@ -13,8 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# default logging properties:
-#  by default, log everything at INFO or higher to the console
+# Log4j 1.2 file that configures logging for Accumulo commands
+
+# By default, log everything at INFO or higher to the console
 log4j.rootLogger=INFO,A1
 
 # hide Jetty junk
