--- a/assemble/conf/log4j-service.properties
+++ b/assemble/conf/log4j-service.properties
@@ -13,11 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Log4j 1.2 file that configures logging for all Accumulo services except for Monitor: Master, TabletServer, GC & Tracer
+
 # Write out everything at the DEBUG level to the debug log
 log4j.appender.A2=org.apache.log4j.RollingFileAppender
 log4j.appender.A2.File=${accumulo.log.dir}/${accumulo.application}${accumulo.service.instance}_${accumulo.local.hostname}.debug.log
 log4j.appender.A2.MaxFileSize=100MB
-log4j.appender.A2.MaxBackupIndex=5
+log4j.appender.A2.MaxBackupIndex=10
 log4j.appender.A2.Threshold=DEBUG
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %m%n
@@ -26,7 +28,7 @@ log4j.appender.A2.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %m%n
 log4j.appender.A3=org.apache.log4j.RollingFileAppender
 log4j.appender.A3.File=${accumulo.log.dir}/${accumulo.application}${accumulo.service.instance}_${accumulo.local.hostname}.log
 log4j.appender.A3.MaxFileSize=100MB
-log4j.appender.A3.MaxBackupIndex=5
+log4j.appender.A3.MaxBackupIndex=10
 log4j.appender.A3.Threshold=INFO
 log4j.appender.A3.layout=org.apache.log4j.PatternLayout
 log4j.appender.A3.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %m%n
