--- a/assemble/conf/log4j-monitor.properties
+++ b/assemble/conf/log4j-monitor.properties
@@ -17,7 +17,7 @@
 
 # Write out everything at the DEBUG level to the debug log
 log4j.appender.A2=org.apache.log4j.RollingFileAppender
-log4j.appender.A2.File=${accumulo.log.dir}/${accumulo.application}_${accumulo.local.hostname}.debug.log
+log4j.appender.A2.File=${accumulo.log.dir}/${accumulo.application}.debug.log
 log4j.appender.A2.MaxFileSize=100MB
 log4j.appender.A2.MaxBackupIndex=10
 log4j.appender.A2.Threshold=DEBUG
@@ -26,7 +26,7 @@ log4j.appender.A2.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %X{applic
 
 # Write out INFO and higher to the regular log
 log4j.appender.A3=org.apache.log4j.RollingFileAppender
-log4j.appender.A3.File=${accumulo.log.dir}/${accumulo.application}_${accumulo.local.hostname}.log
+log4j.appender.A3.File=${accumulo.log.dir}/${accumulo.application}.log
 log4j.appender.A3.MaxFileSize=100MB
 log4j.appender.A3.MaxBackupIndex=10
 log4j.appender.A3.Threshold=INFO
@@ -35,12 +35,10 @@ log4j.appender.A3.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %X{applic
 
 # Keep the last few log messages for display to the user
 log4j.appender.GUI=org.apache.accumulo.server.monitor.LogService
-log4j.appender.GUI.Keep=50
 log4j.appender.GUI.Threshold=WARN
 
 # Log accumulo messages to debug, normal and GUI
 log4j.logger.org.apache.accumulo=DEBUG, A2, A3, GUI
-log4j.additivity.org.apache.accumulo=false
 
 # Log non-accumulo messages to debug, normal logs.
 log4j.rootLogger=INFO, A2, A3
