--- a/assemble/conf/log4j-service.properties
+++ b/assemble/conf/log4j-service.properties
@@ -17,7 +17,7 @@
 
 # Write out everything at the DEBUG level to the debug log
 log4j.appender.A2=org.apache.log4j.RollingFileAppender
-log4j.appender.A2.File=${accumulo.log.dir}/${accumulo.application}${accumulo.service.instance}_${accumulo.local.hostname}.debug.log
+log4j.appender.A2.File=${accumulo.log.dir}/${accumulo.application}.debug.log
 log4j.appender.A2.MaxFileSize=100MB
 log4j.appender.A2.MaxBackupIndex=10
 log4j.appender.A2.Threshold=DEBUG
@@ -26,7 +26,7 @@ log4j.appender.A2.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %m%n
 
 # Write out INFO and higher to the regular log
 log4j.appender.A3=org.apache.log4j.RollingFileAppender
-log4j.appender.A3.File=${accumulo.log.dir}/${accumulo.application}${accumulo.service.instance}_${accumulo.local.hostname}.log
+log4j.appender.A3.File=${accumulo.log.dir}/${accumulo.application}.log
 log4j.appender.A3.MaxFileSize=100MB
 log4j.appender.A3.MaxBackupIndex=10
 log4j.appender.A3.Threshold=INFO
@@ -35,15 +35,12 @@ log4j.appender.A3.layout.ConversionPattern=%d{ISO8601} [%-8c{2}] %-5p: %m%n
 
 # Send all logging data to a centralized logger
 # If the centralized logger is down, buffer the log events, but drop them if it stays down
-log4j.appender.ASYNC=org.apache.accumulo.start.util.AsyncSocketAppender
-log4j.appender.ASYNC.RemoteHost=${accumulo.log.host}
-log4j.appender.ASYNC.Port=${accumulo.log.port}
-log4j.appender.ASYNC.Application=${accumulo.application}${accumulo.service.instance}:${accumulo.local.hostname}
+log4j.appender.ASYNC=org.apache.accumulo.monitor.util.AccumuloMonitorAppender
 log4j.appender.ASYNC.Threshold=WARN
 
 ## Configures Audit logs which are OFF by default.
 #log4j.appender.AUDIT=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.AUDIT.File=${accumulo.log.dir}/${accumulo.local.hostname}.audit
+#log4j.appender.AUDIT.File=${accumulo.log.dir}/${accumulo.application}.audit
 #log4j.appender.AUDIT.DatePattern='.'yyyy-MM-dd
 #log4j.appender.AUDIT.layout=org.apache.log4j.PatternLayout
 #log4j.appender.AUDIT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS/Z} [%c{2}] %-5p: %m%n
@@ -54,7 +51,6 @@ log4j.logger.org.apache.accumulo.audit=OFF
 
 # Log accumulo events to the debug, normal and remote logs.
 log4j.logger.org.apache.accumulo=DEBUG, A2, A3, ASYNC
-log4j.additivity.org.apache.accumulo=false
 
 log4j.logger.org.apache.accumulo.core.file.rfile.bcfile=INFO
 log4j.logger.org.mortbay.log=WARN
